@@ -280,7 +280,8 @@ wxMSW:
 - Return the restored window size from GetSize() when window is minimized.
 - wxCheckListBox now looks more native, especially under XP (Marcin Malich).
 - Allow tooltips longer than 64 (up to 128) characters in wxTaskBarIcon
-- Fix centering wxFileDialog
+- Fix centering wxFileDialog and allow positioning it
+- Allow centering wxMessageDialog on its parent window (troelsk)
 
 wxX11:
 
